--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -178,7 +178,10 @@ html
 
       .container
         p
-        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases') Download from GitHub
+        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub
+        p
+        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/tag/v1.4.8')
+          b Download Beta Releases
     
     section.blue#featured
       .container
