Change beta version link

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -180,7 +180,7 @@ html
         p
         a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/latest') Download from GitHub
         p
-        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/tag/v1.4.8')
+        a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop/releases/tag/v1.5.0-beta.1')
           b Download Beta Releases
     
     section.blue#featured
