--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -348,3 +348,33 @@ footer
 
   &.feature-3
     +stitches(-460px, 0, 230px, 200px)
+
+section.legal
+  &.legal-2
+    padding-top: 30px
+    padding-bottom: 30px
+    background: $blue
+
+    h2
+      margin: 0
+
+  .content
+    text-align: left
+    max-width: 800px
+    display: block
+    margin: auto
+    line-height: 1.4
+
+    ol > li
+      margin-top: 30px
+
+    span.legal-title
+      font-weight: normal
+
+    .last-updated-at
+      display: block
+      margin-top: 50px
+      margin-bottom: 20px
+
+  h2.legal.title
+    color: white
