--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -26,7 +26,7 @@ html
         p.subtitle A simple &amp; beautiful app for Facebook Messenger.#[br]Chat without distractions on any OS.
 
         a.button.filled(href='#download' data-scroll) Download Now
-        span.notice Not an official app. No affiliation with Facebook.
+        span.notice No affiliation with Facebook.
 
     section.blue#platforms
       .container
@@ -172,7 +172,7 @@ html
 
     footer
       .container
-        p.left No affiliation with Facebook. Icons by #[a(href='http://linea.io/') Dario Ferrando].
+        p.left No affiliation with Facebook. Icons by #[a(href='http://linea.io/') Dario Ferrando]. Contact: #[a(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com]
 
     // inject:js
 
