--- a/src/jade/eula.jade
+++ b/src/jade/eula.jade
@@ -24,7 +24,7 @@ html
       .container
         .content
 
-          p This End-User License Agreement (EULA) is a legal agreement between you (either as an individual or on behalf of an entity) and Alexandru Rosianu regarding your use of Messenger for Desktop for OS X, Windows and Linux and associated documentation (the "Software"). This EULA includes the #[a.link(href='/terms.html') Terms and Conditions] and #[a.link(href='/privacy.html') Privacy Policy]. IF YOU DO NOT AGREE TO ALL OF THE TERMS OF THIS EULA, DO NOT INSTALL, USE OR COPY THE SOFTWARE.
+          p This End-User License Agreement (EULA) is a legal agreement between you (either as an individual or on behalf of an entity) and The Cofounders Ltd, Seychelles regarding your use of Messenger for Desktop for OS X, Windows and Linux and associated documentation (the "Software"). This EULA includes the #[a.link(href='/terms.html') Terms and Conditions] and #[a.link(href='/privacy.html') Privacy Policy]. IF YOU DO NOT AGREE TO ALL OF THE TERMS OF THIS EULA, DO NOT INSTALL, USE OR COPY THE SOFTWARE.
 
           ol
             li
@@ -34,9 +34,9 @@ html
 
               p If so, you may use the Software for free and for any lawful purpose.
 
-              p This Software automatically communicates with Alexandru Rosianu's server(s) for three reasons: (1) to receive and install updates; (2) to send error reports; and (3) to send anonymized usage information. You can view the source code to see what information is sent, and you may opt out of sending the anonymized usage data.
+              p This Software automatically communicates with The Cofounders Ltd, Seychelles's server(s) for three reasons: (1) to receive and install updates; (2) to send error reports; and (3) to send anonymized usage information. You can view the source code to see what information is sent, and you may opt out of sending the anonymized usage data.
 
-              p This Software is provided "as-is" with no warranties, and you agree that Alexandru Rosianu is not liable for anything you do with it.
+              p This Software is provided "as-is" with no warranties, and you agree that The Cofounders Ltd, Seychelles is not liable for anything you do with it.
 
               p You really ought to just go ahead and read the whole EULA. It's not all that long. You should not only rely on this summary.
 
@@ -48,7 +48,7 @@ html
             li
               span.legal-title The License
 
-              p This EULA entitles you to install as many copies of the Software as you want, and use the Software for any lawful purpose consistent with this EULA. Your license to use the Software is expressly conditioned upon your agreement to all of the terms of this EULA. This software is licensed, not sold. Alexandru Rosianu reserves all other rights not granted by this EULA.
+              p This EULA entitles you to install as many copies of the Software as you want, and use the Software for any lawful purpose consistent with this EULA. Your license to use the Software is expressly conditioned upon your agreement to all of the terms of this EULA. This software is licensed, not sold. The Cofounders Ltd, Seychelles reserves all other rights not granted by this EULA.
 
             li
               span.legal-title The Restrictions
@@ -64,11 +64,11 @@ html
             li
               span.legal-title Privacy Notices
 
-              p The Software automatically communicates with Alexandru Rosianu's server(s) for three purposes: (1) updating the Software; (2) sending error reports; and (3) sending anonymized usage data so I may improve the Software. If you are a programmer, you may view the source code of the Software to learn more about the specific information that is sent. You may opt out of sending anonymized usage data, crash reporting and update checks by disabling these features from the Software menu.
+              p The Software automatically communicates with The Cofounders Ltd, Seychelles's server(s) for three purposes: (1) updating the Software; (2) sending error reports; and (3) sending anonymized usage data so I may improve the Software. If you are a programmer, you may view the source code of the Software to learn more about the specific information that is sent. You may opt out of sending anonymized usage data, crash reporting and update checks by disabling these features from the Software menu.
 
-              p Error Reports. In order to help improve the Software, when the Software encounters certain errors, it will automatically send some information to Alexandru Rosianu's server(s) about the error. Reports include data such as (but not only): information about the crash, your Operating System type, Software version. If you do not want to send crash reports to Alexandru Rosianu, you may opt out by changing your settings in the Software menu.
+              p Error Reports. In order to help improve the Software, when the Software encounters certain errors, it will automatically send some information to The Cofounders Ltd, Seychelles's server(s) about the error. Reports include data such as (but not only): information about the crash, your Operating System type, Software version. If you do not want to send crash reports to The Cofounders Ltd, Seychelles, you may opt out by changing your settings in the Software menu.
 
-              p Anonymized Usage Data. Alexandru Rosianu collects anonymized data about your usage of the Software to help make it more awesome. If you do not want to send anonymized usage data to Alexandru Rosianu, you may opt out by changing your settings in the Software menu.
+              p Anonymized Usage Data. The Cofounders Ltd, Seychelles collects anonymized data about your usage of the Software to help make it more awesome. If you do not want to send anonymized usage data to The Cofounders Ltd, Seychelles, you may opt out by changing your settings in the Software menu.
 
             li
               span.legal-title Open-Source Notices
@@ -77,38 +77,35 @@ html
 
               p To the extent there is conflict between the license terms covering the Open-Source Components and this EULA, the terms of such licenses will apply in lieu of the terms of this EULA. To the extent the terms of the licenses applicable to Open-Source Components prohibit any of the restrictions in this Agreement with respect to such Open-Source Component, such restrictions will not apply to such Open-Source Component.
 
-              p The Software itself is open source and is available on GitHub at #[a.link(href='https://github.com/Aluxian/Facebook-Messenger-Desktop') github.com/Aluxian/Facebook-Messenger-Desktop].
-
             li
               span.legal-title Intellectual Property Notices
 
-              p The Software makes use of #[a.link(href='https://messenger.com/') messenger.com], which is the property of Facebook Inc. The Facebook and Messenger logo, Messenger app, brand identity and other property rights are Facebook Inc's exclusive property and not Alexandru Rosianu's.
+              p The Software makes use of #[a.link(href='https://messenger.com/') messenger.com], which is the property of Facebook Inc. The Facebook and Messenger logo, Messenger app, brand identity and other property rights are Facebook Inc's exclusive property and not The Cofounders Ltd, Seychelles's.
 
             li
               span.legal-title Disclaimers and Limitations on Liability
 
-              p THE SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, AND NO WARRANTY, EITHER EXPRESS OR IMPLIED, IS GIVEN. YOUR USE OF THE SOFTWARE IS AT YOUR SOLE RISK. Alexandru Rosianu does not warrant that (i) the Software will meet your specific requirements; (ii) the Software is fully compatible with any particular platform; (iii) your use of the Software will be uninterrupted, timely, secure, or error-free; (iv) the results that may be obtained from the use of the Software will be accurate or reliable; (v) the quality of any products, services, information, or other material purchased or obtained by you through the Software will meet your expectations; or (vi) any errors in the Software will be corrected.
+              p THE SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, AND NO WARRANTY, EITHER EXPRESS OR IMPLIED, IS GIVEN. YOUR USE OF THE SOFTWARE IS AT YOUR SOLE RISK. The Cofounders Ltd, Seychelles does not warrant that (i) the Software will meet your specific requirements; (ii) the Software is fully compatible with any particular platform; (iii) your use of the Software will be uninterrupted, timely, secure, or error-free; (iv) the results that may be obtained from the use of the Software will be accurate or reliable; (v) the quality of any products, services, information, or other material purchased or obtained by you through the Software will meet your expectations; or (vi) any errors in the Software will be corrected.
 
-              p YOU EXPRESSLY UNDERSTAND AND AGREE THAT ALEXANDRU ROSIANU SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL OR EXEMPLARY DAMAGES, INCLUDING BUT NOT LIMITED TO, DAMAGES FOR LOSS OF PROFITS, GOODWILL, USE, DATA OR OTHER INTANGIBLE LOSSES (EVEN IF ALEXANDRU ROSIANU HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES) RELATED TO THE SOFTWARE, including, for example: (i) the use or the inability to use the Software; (ii) the cost of procurement of substitute goods and services resulting from any goods, data, information or services purchased or obtained or messages received or transactions entered into through or from the Software; (iii) unauthorized access to or alteration of your transmissions or data; (iv) statements or conduct of any third-party on the Software; (v) or any other matter relating to the Software.
+              p YOU EXPRESSLY UNDERSTAND AND AGREE THAT THE COFOUNDERS LTD, SEYCHELLES SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL OR EXEMPLARY DAMAGES, INCLUDING BUT NOT LIMITED TO, DAMAGES FOR LOSS OF PROFITS, GOODWILL, USE, DATA OR OTHER INTANGIBLE LOSSES (EVEN IF THE COFOUNDERS LTD, SEYCHELLES HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES) RELATED TO THE SOFTWARE, including, for example: (i) the use or the inability to use the Software; (ii) the cost of procurement of substitute goods and services resulting from any goods, data, information or services purchased or obtained or messages received or transactions entered into through or from the Software; (iii) unauthorized access to or alteration of your transmissions or data; (iv) statements or conduct of any third-party on the Software; (v) or any other matter relating to the Software.
 
-              p Alexandru Rosianu reserves the right at any time and from time to time to modify or discontinue, temporarily or permanently, the Software (or any part thereof) with or without notice. Alexandru Rosianu shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the Software.
+              p The Cofounders Ltd, Seychelles reserves the right at any time and from time to time to modify or discontinue, temporarily or permanently, the Software (or any part thereof) with or without notice. The Cofounders Ltd, Seychelles shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the Software.
 
             li
               span.legal-title Miscellanea
 
-              p The failure of Alexandru Rosianu to exercise or enforce any right or provision of this EULA shall not constitute a waiver of such right or provision.
+              p The failure of The Cofounders Ltd, Seychelles to exercise or enforce any right or provision of this EULA shall not constitute a waiver of such right or provision.
 
-              p This EULA constitutes the entire agreement between you and Alexandru Rosianu and governs your use of the Software, superseding any prior agreements between you and Alexandru Rosianu (including, but not limited to, any prior versions of the EULA).
+              p This EULA constitutes the entire agreement between you and The Cofounders Ltd, Seychelles and governs your use of the Software, superseding any prior agreements between you and The Cofounders Ltd, Seychelles (including, but not limited to, any prior versions of the EULA).
 
               p You agree that this EULA and your use of the Software are governed under Romanian law and any dispute related to the Software must be brought in a tribunal of competent jurisdiction located in or near Bucharest, Romania.
 
-              p Please send any questions about this EULA to #[a.link(href='mailto:me@aluxian.com') me@aluxian.com].
+              p Please send any questions about this EULA to #[a.link(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com].
 
-          i.last-updated-at The last update to this EULA was posted on May 6, 2016.
+          i.last-updated-at The last update to this EULA was posted on December 17, 2016.
 
     footer
       .container
-        p.left No affiliation with Facebook. #[a(href='/terms.html') Terms and Conditions]. #[a(href='/privacy.html') Privacy Policy].
-        p.right Coded with &hearts; by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
+        p.left No affiliation with Facebook. Icons by #[a(href='http://linea.io/') Dario Ferrando]. Contact: #[a(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com]
 
     include ./includes/ga.jade
