--- a/src/jade/privacy.jade
+++ b/src/jade/privacy.jade
@@ -30,7 +30,7 @@ html
             li
               span.legal-title Definitions
 
-              p Messenger for Desktop is owned by Alexandru Rosianu (referred to as "I" or "Me"). As a customer of this Service you're a "User" or "You" according to this agreement. The App or any Services offered by me will be referred to as "Messenger for Desktop", "App" or "Service".
+              p Messenger for Desktop is owned by The Cofounders Ltd, Seychelles (referred to as "I" or "Me"). As a customer of this Service you're a "User" or "You" according to this agreement. The App or any Services offered by me will be referred to as "Messenger for Desktop", "App" or "Service".
 
               p This Privacy Policy is included in the #[a.link(href='/terms.html') Terms and Conditions].
 
@@ -81,13 +81,12 @@ html
             li
               span.legal-title Questions
 
-              p If you have any questions or comments, feel free to write an email to #[a.link(href='mailto:me@aluxian.com') me@aluxian.com].
+              p If you have any questions or comments, feel free to write an email to #[a.link(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com].
 
-          i.last-updated-at The last update to this Privacy Policy was posted on May 6, 2016.
+          i.last-updated-at The last update to this Privacy Policy was posted on December 17, 2016.
 
     footer
       .container
-        p.left No affiliation with Facebook. #[a(href='/terms.html') Terms and Conditions]. #[a(href='/privacy.html') Privacy Policy].
-        p.right Coded with &hearts; by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
+        p.left No affiliation with Facebook. Icons by #[a(href='http://linea.io/') Dario Ferrando]. Contact: #[a(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com]
 
     include ./includes/ga.jade
