--- a/src/jade/terms.jade
+++ b/src/jade/terms.jade
@@ -30,7 +30,7 @@ html
             li
               span.legal-title Definitions
 
-              p Messenger for Desktop is owned by Alexandru Rosianu (referred to as "I" or "Me"). As a customer of this Service you're a "User" or "You" according to this agreement. The App or any Services offered by me will be referred to as "Messenger for Desktop", "App" or "Service".
+              p Messenger for Desktop is owned by The Cofounders Ltd, Seychelles (referred to as "I" or "Me"). As a customer of this Service you're a "User" or "You" according to this agreement. The App or any Services offered by me will be referred to as "Messenger for Desktop", "App" or "Service".
 
               p These Terms and Conditions ("Terms") include the #[a.link(href='/privacy.html') Privacy Policy].
 
@@ -71,15 +71,14 @@ html
 
               p I am not responsible for any content of third party sites I link to.
 
-              p Messenger for Desktop, these Terms and the Privacy Policy are subject to Romanian law. Place of jurisdiction for all disputes is Bucharest, Romania.
+              p Messenger for Desktop, these Terms and the Privacy Policy are subject to Seychelles law. Place of jurisdiction for all disputes is Seychelles.
 
               p If individual articles of these Terms are void, the remaining Terms and Conditions remain unaffected.
 
-          i.last-updated-at The last update to these Terms and Conditions was posted on May 6, 2016.
+          i.last-updated-at The last update to these Terms and Conditions was posted on December 17, 2016.
 
     footer
       .container
-        p.left No affiliation with Facebook. #[a(href='/terms.html') Terms and Conditions]. #[a(href='/privacy.html') Privacy Policy].
-        p.right Coded with &hearts; by #[a(href='http://www.aluxian.com/') Alexandru Rosianu]
+        p.left No affiliation with Facebook. Icons by #[a(href='http://linea.io/') Dario Ferrando]. Contact: #[a(href='mailto:hello@messengerfordesktop.com') hello@messengerfordesktop.com]
 
     include ./includes/ga.jade
